--- a/packages/web/src/app/shared/component-documentation/component-properties-table/component-properties-table.component.scss
+++ b/packages/web/src/app/shared/component-documentation/component-properties-table/component-properties-table.component.scss
@@ -36,7 +36,7 @@
 .properties-filter {
   margin-top: -40px;
   margin-left: auto;
-  margin-bottom: 8px;
+  margin-bottom: 16px;
   width: 50%;
 }
 
@@ -44,12 +44,16 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  gap: 8px;
+  gap: 16px;
   padding: 16px;
 
   width: 100%;
   & img {
     width: 100px;
+  }
+  & span {
+    text-align: center;
+    margin: 0 16px;
   }
 }
 
