aria-hidden image

--- a/packages/web/src/app/shared/component-documentation/component-properties-table/component-properties-table.component.html
+++ b/packages/web/src/app/shared/component-documentation/component-properties-table/component-properties-table.component.html
@@ -53,7 +53,7 @@
       </tbody>
     </table>
     <div class="no-properties-found" *ngIf="filteredComponentProps.length === 0">
-      <img class="" src="assets/no-results/no-results.svg" />
+      <img src="assets/no-results/no-results.svg" alt="" aria-hidden="true" />
       <span class="e-title-caps e-text-center">No properties found matching your search</span>
     </div>
   </div>
@@ -104,7 +104,7 @@
       </tbody>
     </table>
     <div class="no-properties-found" *ngIf="filteredComponentProps.length === 0">
-      <img src="assets/no-results/no-results.svg" />
+      <img src="assets/no-results/no-results.svg" alt="" aria-hidden="true" />
       <span>No properties found matching your search</span>
     </div>
   </div>
