increase padding, reduce empyty state image size

--- a/packages/web/src/app/shared/component-documentation/component-properties-table/component-properties-table.component.html
+++ b/packages/web/src/app/shared/component-documentation/component-properties-table/component-properties-table.component.html
@@ -105,7 +105,7 @@
     </table>
     <div class="no-properties-found" *ngIf="filteredComponentProps.length === 0">
       <img src="assets/no-results/no-results.svg" alt="" aria-hidden="true" />
-      <span>No properties found matching your search</span>
+      <span class="e-title-caps e-text-center">No properties found matching your search</span>
     </div>
   </div>
   <div class="e-table__footnote e-table__footnote--compact">* Required - Properties that must be present</div>
