--- a/packages/web/src/app/shared/component-documentation/component-properties-table/component-properties-table.component.scss
+++ b/packages/web/src/app/shared/component-documentation/component-properties-table/component-properties-table.component.scss
@@ -45,11 +45,11 @@
   flex-direction: column;
   align-items: center;
   gap: 16px;
-  padding: 16px;
+  padding: 32px;
 
   width: 100%;
   & img {
-    width: 100px;
+    width: 75px;
   }
   & span {
     text-align: center;
@@ -59,6 +59,7 @@
 
 @media (max-width: 768px) {
   .properties-filter {
+    margin-top: -24px;
     width: 100%;
     max-width: 100%;
     & .e-input {
