--- a/packages/web/src/app/shared/component-documentation/component-properties-table/component-properties-table.component.html
+++ b/packages/web/src/app/shared/component-documentation/component-properties-table/component-properties-table.component.html
@@ -1,9 +1,30 @@
 <div class="properties-container">
+  <div class="e-form-field e-form-field--compact properties-filter">
+    <div class="e-search e-search--instant" [ngClass]="{ 'e-search--searched': searchTerm !== '' }">
+      <div class="e-input">
+        <input
+          aria-label="Search properties table"
+          type="search"
+          placeholder="Search"
+          [(ngModel)]="searchTerm"
+          (ngModelChange)="searchProps()"
+        />
+      </div>
+      <i class="e-icon e-icon--search-color" aria-hidden="true"></i>
+      <button
+        class="e-btn e-btn--icon e-btn--lg"
+        (click)="clearSearchField()"
+        aria-label="Clear search field"
+      >
+        <span class="e-btn__icon"><i class="e-icon e-icon--close-bold" aria-hidden="true"></i></span>
+      </button>
+    </div>
+  </div>
   <div class="e-table-container desktop">
     <table
-      class="e-table e-table--sticky-column-header e-table--compact"
-      *ngIf="componentProps"
-      aria-label="Properties details and descriptions"
+      class="e-table e-table--sticky-column-header e-table--sticky-header e-table--compact"
+      *ngIf="filteredComponentProps.length > 0"
+      aria-label="Property details and descriptions"
     >
       <thead>
         <tr>
@@ -14,23 +35,36 @@
         </tr>
       </thead>
       <tbody>
-        <tr *ngFor="let prop of componentProps">
+        <tr *ngFor="let prop of filteredComponentProps">
           <th scope="row" class="table-code-text">
-            <span>{{ prop.attribute }}</span>
+            <span [id]="'property-row-' + prop.attribute + '-attribute'">{{ prop.attribute }}</span>
             <span *ngIf="prop.isRequired">*</span>
           </th>
-          <td class="table-code-text">{{ prop.type }}</td>
-          <td class="e-table__cell--multiline-small">{{ prop.description }}</td>
-          <td class="table-code-text" *ngIf="prop.default">{{ prop.default }}</td>
-          <td class="table-code-text" *ngIf="!prop.default">-</td>
+          <td class="table-code-text" [id]="'property-row-' + prop.attribute + '-type'">
+            {{ prop.type }}
+          </td>
+          <td class="e-table__cell--multiline-small" [id]="'property-row-' + prop.attribute + '-description'">
+            {{ prop.description }}
+          </td>
+          <td class="table-code-text" [id]="'property-row-' + prop.attribute + '-default'">
+            {{ prop.default ? prop.default : '-' }}
+          </td>
         </tr>
       </tbody>
     </table>
+    <div class="no-properties-found" *ngIf="filteredComponentProps.length === 0">
+      <img src="assets/no-results/no-results.svg" alt="" aria-hidden="true" />
+      <span class="e-title-caps e-text-center">No properties found matching your search</span>
+    </div>
   </div>
-  <div class="e-table-container mobile properties-mobile">
+  <div
+    class="e-table-container mobile"
+    [ngClass]="{ 'properties-mobile': filteredComponentProps.length > 0 }"
+  >
     <table
       class="e-table-mobile e-table-mobile--sticky-header e-table-mobile--compact"
-      aria-label="Beskrivelse av tabellen"
+      *ngIf="filteredComponentProps.length > 0"
+      aria-label="Property details and descriptions"
     >
       <thead>
         <tr>
@@ -38,26 +72,41 @@
           <th class="e-table-mobile__cell" scope="col"></th>
         </tr>
       </thead>
-      <tbody *ngFor="let prop of componentProps">
+      <tbody *ngFor="let prop of filteredComponentProps">
         <tr>
-          <th class="e-table-mobile__cell" scope="col">{{ prop.attribute }}</th>
+          <th
+            class="e-table-mobile__cell"
+            scope="col"
+            [id]="'property-row-' + prop.attribute + '-attribute-mobile'"
+          >
+            {{ prop.attribute }}
+          </th>
           <th class="e-table-mobile__cell" scope="col"></th>
         </tr>
         <tr>
           <th class="e-table-mobile__cell" scope="row">Type</th>
-          <td class="e-table-mobile__cell">{{ prop.type }}</td>
+          <td class="e-table-mobile__cell" [id]="'property-row-' + prop.attribute + '-type-mobile'">
+            {{ prop.type }}
+          </td>
         </tr>
         <tr>
           <th class="e-table-mobile__cell" scope="row">Description</th>
-          <td class="e-table-mobile__cell">{{ prop.description }}</td>
+          <td class="e-table-mobile__cell" [id]="'property-row-' + prop.attribute + '-description-mobile'">
+            {{ prop.description }}
+          </td>
         </tr>
         <tr>
           <th class="e-table-mobile__cell" scope="row">Default</th>
-          <td class="e-table-mobile__cell" *ngIf="prop.default">{{ prop.default }}</td>
-          <td class="e-table-mobile__cell" *ngIf="!prop.default">-</td>
+          <td class="e-table-mobile__cell" [id]="'property-row-' + prop.attribute + '-default-mobile'">
+            {{ prop.default ? prop.default : '-' }}
+          </td>
         </tr>
       </tbody>
     </table>
+    <div class="no-properties-found" *ngIf="filteredComponentProps.length === 0">
+      <img src="assets/no-results/no-results.svg" alt="" aria-hidden="true" />
+      <span class="e-title-caps e-text-center">No properties found matching your search</span>
+    </div>
   </div>
   <div class="e-table__footnote e-table__footnote--compact">* Required - Properties that must be present</div>
   <div class="e-table__footnote e-table__footnote--compact">
