--- a/packages/components/components/elvis-progress-linear/src/react/style.scss
+++ b/packages/components/components/elvis-progress-linear/src/react/style.scss
@@ -5,39 +5,47 @@ $red: #ee0701;
 .ewc-progress-linear {
   display: flex;
   width: 100%;
-  height: 2px;
+  height: 4px;
   border-radius: 50px;
   background-color: $grey-10;
   margin: 0;
   margin-bottom: 40px;
 
-  &--range {
+  .ewc-progress-linear__progress {
     border-radius: 50px;
     align-self: center;
-    height: 6px;
+    height: 8px;
     margin-left: 0;
     background-color: $green;
-    transition: width 0.3s ease-in;
+  }
+
+  &--range {
+    .ewc-progress-linear__progress {
+      transition: width 0.3s ease-in;
+    }
   }
 
   &--indeterminate {
-    border-radius: 50px;
-    align-self: center;
-    height: 6px;
-    width: 15%;
-    margin-left: 0;
-    background-color: $green;
-    animation: loading 1s infinite;
+    .ewc-progress-linear__progress {
+      width: 15%;
+      background-color: $green;
+      animation: loading 1s infinite;
+    }
   }
 
   &--error {
-    border-radius: 50px;
-    align-self: center;
-    height: 6px;
-    width: 100% !important;
-    margin-left: 0;
-    background-color: $red;
-    transition: width 0.3s ease-in;
+    .ewc-progress-linear__progress {
+      width: 100% !important;
+      background-color: $red;
+      transition: width 0.3s ease-in;
+    }
+  }
+
+  &.ewc-progress-linear--lg {
+    height: 8px;
+    .ewc-progress-linear__progress {
+      height: 16px;
+    }
   }
 }
 
