--- a/packages/web/src/app/dev/v2-playground/v2-playground.component.html
+++ b/packages/web/src/app/dev/v2-playground/v2-playground.component.html
@@ -5,7 +5,19 @@
     <!--Test the component here (delete what was here previously). When done add it to the list alphabetically-->
     <h3>Test your component here</h3>
     <!--Normal version-->
-    <div class="e-bg-white"></div>
+    <div class="e-bg-white">
+      <elvia-progress-linear
+        [isIndeterminate]="indeterminate"
+        [value]="40"
+        [isError]="progressError"
+      ></elvia-progress-linear>
+      <elvia-progress-linear
+        [isIndeterminate]="indeterminate"
+        [value]="40"
+        [size]="'large'"
+        [isError]="progressError"
+      ></elvia-progress-linear>
+    </div>
     <!--Inverted version-->
     <div class="e-bg-grey"></div>
   </div>
@@ -235,11 +247,11 @@
   <!--Progress linear-->
   <div class="example-wrapper">
     <h3>Progress linear</h3>
-    <elvia-progress-linear
+    <!-- <elvia-progress-linear
       [isIndeterminate]="indeterminate"
       [value]="progressValue"
       [isError]="progressError"
-    ></elvia-progress-linear>
+    ></elvia-progress-linear> -->
     <div style="margin-bottom: 32px; display: flex">
       <div style="display: flex; width: 100%; justify-content: space-between">
         <button class="e-btn" (click)="progressValue = progressValue + 10">Increase Progress</button>
