add disabled color to multiselect disabled option

--- a/packages/web/src/app/dev/v2-playground/v2-playground.component.html
+++ b/packages/web/src/app/dev/v2-playground/v2-playground.component.html
@@ -13,6 +13,7 @@
         [placeholder]="'Select an option'"
         [placeholderIcon]="'arrowUp'"
         [items]="dropdownOptions"
+        [value]="dropdownDefOptions"
       ></elvia-dropdown>
     </div>
     <!--Inverted version-->
