Progressbar - size prop (#929)
* Progressbar - size prop

--- a/packages/web/src/app/dev/v2-playground/v2-playground.component.html
+++ b/packages/web/src/app/dev/v2-playground/v2-playground.component.html
@@ -5,12 +5,7 @@
     <!--Test the component here (delete what was here previously). When done add it to the list alphabetically-->
     <h3>Test your component here</h3>
     <!--Normal version-->
-    <div class="e-bg-white">
-      <i class="e-icon e-icon--remove_circle-filled e-icon--sm e-icon--color-red"></i>
-      <i class="e-icon e-icon--check_circle-filled e-icon--sm e-icon--color-green"></i>
-      <i class="e-icon e-icon--add_circle e-icon--sm e-icon--color-orange"></i>
-      <elvia-icon name="removeCircleFilled" color="red"></elvia-icon>
-    </div>
+    <div class="e-bg-white"></div>
     <!--Inverted version-->
     <div class="e-bg-grey">
       <i class="e-icon e-icon--remove_circle-filled e-icon--sm e-icon--color-red e-icon--inverted"></i>
