--- a/packages/elvis/src/components/form/field.scss
+++ b/packages/elvis/src/components/form/field.scss
@@ -97,6 +97,19 @@
       color: colors.color('disabled');
     }
   }
+
+  /* 
+Dersom form fieldet har modden width-full, så fjernes max-width fra alle input elementer som fielden inneholder.
+Det er bare field som trenger denne modden, alle inputs kan las være i fred.
+
+Tanke: Følger ikke DRY ettersom vi setter samme styles på flere elementer. Både parent og child. Samme gjelder for inline fileds. */
+  &.e-form-field--width-full .e-input,
+  &.e-form-field--width-full .e-input > input,
+  &.e-form-field--width-full .e-input > textarea,
+  &.e-form-field--width-full .e-input > div,
+  &.e-form-field--combined.e-form-field--width-full > .e-form-field__input {
+    max-width: unset;
+  }
 }
 
 .e-inlined-field {
@@ -122,5 +135,16 @@
     &.e-form-field--medium {
       width: 140px;
     }
+
+    &.e-form-field--width-full {
+      max-width: unset;
+      width: 100%;
+    }
+  }
+
+  &.e-inlined-field--width-full,
+  &.e-inlined-field--width-full .e-input,
+  &.e-inlined-field--width-full input {
+    max-width: unset;
   }
 }
