add description to Full Width documentation
*Instructions on how to use e-form-field--width-full and e-inlined-field--width-full.

*Add demo of a inlined form with full width

--- a/packages/web/src/app/doc-pages/components/forms/input-doc/input-doc.component.html
+++ b/packages/web/src/app/doc-pages/components/forms/input-doc/input-doc.component.html
@@ -74,6 +74,9 @@
 
       <app-component-subsection [sectionTitle]="'Full width'">
         <ng-container ngProjectAs="sectionContent">
+          The e-form-field--width-full class should be added to the field when the input should take 100% of
+          the width available.
+          <p>Use the e-inlined-field--width-full class if the inputs are inlined on the same line.</p>
           <app-component-example-v1 [codeHTML]="exampleFullwidth"></app-component-example-v1>
         </ng-container>
       </app-component-subsection>
