add Full width documentation for Search

--- a/packages/web/src/app/doc-pages/components/forms/search-doc/search-doc.component.html
+++ b/packages/web/src/app/doc-pages/components/forms/search-doc/search-doc.component.html
@@ -75,6 +75,26 @@
     </ng-container>
   </app-component-section>
 
+  <!-- OPTIONS -->
+  <app-component-section [sectionTitle]="'Options'">
+    <ng-container ngProjectAs="sectionContent">
+      <app-component-subsection [sectionTitle]="'Full width'">
+        <ng-container ngProjectAs="sectionContent">
+          When the Instant search input needs to take up the entire available width, give the field the
+          <span class="code-text">e-form-field—width-full</span>
+          class.
+          <p>
+            Apply the
+            <span class="code-text">e-inlined-field—width-full</span>
+            class to the field when the On Submit search input should take up all of the available width.
+          </p>
+
+          <app-component-example-v1 [codeHTML]="searchFullWidth"></app-component-example-v1>
+        </ng-container>
+      </app-component-subsection>
+    </ng-container>
+  </app-component-section>
+
   <!--SIZE-->
   <app-component-section [sectionTitle]="'Size'">
     <ng-container ngProjectAs="sectionContent">
