--- a/packages/elvis/percy/components/input.html
+++ b/packages/elvis/percy/components/input.html
@@ -105,5 +105,14 @@
         <input id="normal" type="text" placeholder="Placeholder text" />
       </div>
     </div>
+
+    <!-- Tror jeg la til en ny en nå? Må lage/oppdatere PR og se om jeg får tilgang til Percy -Tom 19.08.22, 15:18 -->
+    <div class="e-title-xs e-my-16">Full width input</div>
+    <div class="e-form-field e-form-field--width-full">
+      <label class="e-form-field__label" for="normal">Full width input field</label>
+      <div class="e-input">
+        <input id="normal" type="text" placeholder="Placeholder text" />
+      </div>
+    </div>
   </body>
 </html>
