--- a/packages/elvis/percy/components/search.html
+++ b/packages/elvis/percy/components/search.html
@@ -137,5 +137,77 @@
         <span class="e-btn__title">Search</span>
       </button>
     </div>
+
+    <!-- Instant search width-full -->
+    <div class="e-title-caps e-mb-16">Instant</div>
+    <div class="e-form-field e-form-field--width-full">
+      <div class="e-search e-search--instant">
+        <div class="e-input">
+          <input aria-label="Search" type="search" placeholder="Search" />
+        </div>
+        <i class="e-icon e-icon--search-color" aria-hidden="true"></i>
+        <button class="e-btn e-btn--icon" aria-label="Tøm søkefelt">
+          <span class="e-btn__icon"><i class="e-icon e-icon--close-bold" aria-hidden="true"></i></span>
+        </button>
+      </div>
+    </div>
+
+    <!-- On submit search width-full -->
+    <div class="e-title-caps e-mb-16 e-mt-24">On submit</div>
+    <div class="e-inlined-field e-inlined-field--width-full">
+      <div class="e-form-field">
+        <div class="e-search e-search--on-submit">
+          <div class="e-input">
+            <input aria-label="Search" type="search" placeholder="Search" />
+          </div>
+          <button class="e-btn e-btn--icon" aria-label="Tøm søkefelt">
+            <span class="e-btn__icon"><i class="e-icon e-icon--close-bold" aria-hidden="true"></i></span>
+          </button>
+        </div>
+      </div>
+      <button class="e-btn e-btn--lg e-ml-16">
+        <span class="e-btn__icon">
+          <i class="e-icon e-icon--search-color e-icon--inverted" aria-hidden="true"></i>
+          <i class="e-icon e-icon--search-color" aria-hidden="true"></i>
+        </span>
+        <span class="e-btn__title">Search</span>
+      </button>
+    </div>
+
+    <!-- Instant compact search full width -->
+    <div class="e-title-caps e-mb-16">Instant</div>
+    <div class="e-form-field e-form-field--compact e-form-field--width-full">
+      <div class="e-search e-search--instant">
+        <div class="e-input">
+          <input aria-label="Search" type="search" placeholder="Search" />
+        </div>
+        <i class="e-icon e-icon--search-color" aria-hidden="true"></i>
+        <button class="e-btn e-btn--icon" aria-label="Tøm søkefelt">
+          <span class="e-btn__icon"><i class="e-icon e-icon--close-bold" aria-hidden="true"></i></span>
+        </button>
+      </div>
+    </div>
+
+    <!-- On submit compact full width -->
+    <div class="e-title-caps e-mb-16 e-mt-24">On submit</div>
+    <div class="e-inlined-field e-inlined-field--width-full">
+      <div class="e-form-field e-form-field--compact">
+        <div class="e-search e-search--on-submit">
+          <div class="e-input">
+            <input aria-label="Search" type="search" placeholder="Search" />
+          </div>
+          <button class="e-btn e-btn--icon" aria-label="Tøm søkefelt">
+            <span class="e-btn__icon"><i class="e-icon e-icon--close-bold" aria-hidden="true"></i></span>
+          </button>
+        </div>
+      </div>
+      <button class="e-btn e-btn--sm e-ml-16">
+        <span class="e-btn__icon">
+          <i class="e-icon e-icon--search-color e-icon--inverted" aria-hidden="true"></i>
+          <i class="e-icon e-icon--search-color" aria-hidden="true"></i>
+        </span>
+        <span class="e-btn__title">Search</span>
+      </button>
+    </div>
   </body>
 </html>
