--- a/packages/web/src/app/dev/v2-playground/v2-playground.component.html
+++ b/packages/web/src/app/dev/v2-playground/v2-playground.component.html
@@ -5,25 +5,7 @@
     <!--Test the component here (delete what was here previously). When done add it to the list alphabetically-->
     <h3>Test your component here</h3>
     <!--Normal version-->
-    <div class="e-bg-white">
-      <elvia-accordion
-        [isOpen]="true"
-        openLabel="Show"
-        closeLabel="Hide"
-        size="medium"
-        type="normal"
-        typography="title-md"
-        [spacingAboveContent]="24"
-        (onOpen)="onOpen()"
-        (onClose)="onClose()"
-      >
-        <div slot="content">
-          heloo there heloo there heloo there heloo there heloo there heloo there heloo there heloo there
-          heloo there heloo there heloo there heloo there heloo there heloo there heloo there heloo there
-          heloo there heloo there heloo there heloo there
-        </div>
-      </elvia-accordion>
-    </div>
+    <div class="e-bg-white"></div>
     <!--Inverted version-->
     <div class="e-bg-grey"></div>
   </div>
@@ -32,7 +14,7 @@
   <div class="example-wrapper">
     <h3>Accordion</h3>
     <button (click)="isOpen = !isOpen">helo</button>
-    <!-- <elvia-accordion
+    <elvia-accordion
       [isOpen]="isOpen"
       openLabel="Show"
       closeLabel="Hide"
@@ -44,7 +26,7 @@
       <div slot="content">
         <h3>Hello there</h3>
       </div>
-    </elvia-accordion> -->
+    </elvia-accordion>
   </div>
 
   <!--Box-->
