--- a/packages/web/src/app/dev/v2-playground/v2-playground.component.html
+++ b/packages/web/src/app/dev/v2-playground/v2-playground.component.html
@@ -20,6 +20,7 @@
       closeLabel="Hide"
       size="medium"
       type="normal"
+      typography="title-caps"
       (onOpen)="onOpen()"
       (onClose)="onClose()"
     >
