--- a/packages/web/src/app/dev/v2-playground/v2-playground.component.html
+++ b/packages/web/src/app/dev/v2-playground/v2-playground.component.html
@@ -5,13 +5,17 @@
     <!--Test the component here (delete what was here previously). When done add it to the list alphabetically-->
     <h3>Test your component here</h3>
     <!--Normal version-->
-    <div class="e-bg-white"></div>
-    <!--Inverted version-->
-    <div class="e-bg-grey">
-      <i class="e-icon e-icon--remove_circle-filled e-icon--sm e-icon--color-red e-icon--inverted"></i>
-      <i class="e-icon e-icon--check_circle-filled e-icon--sm e-icon--color-green e-icon--inverted"></i>
-      <i class="e-icon e-icon--add_circle e-icon--sm e-icon--color-orange"></i>
+    <div class="e-bg-white">
+      <elvia-dropdown
+        [label]="'testing something'"
+        [hasSelectAllOption]="true"
+        [placeholder]="'Select an option'"
+        [placeholderIcon]="'arrowUp'"
+        [items]="dropdownOptions"
+      ></elvia-dropdown>
     </div>
+    <!--Inverted version-->
+    <div class="e-bg-grey"></div>
   </div>
 
   <!--Accordion-->
